fix: fix format after update of gravitee-parent
https://gravitee.atlassian.net/browse/APIM-10461