@@ -79,16 +79,15 @@ public class ApiPrimaryOwnerRemovalUpgraderTest {
 
     @Before
     public void setUp() throws Exception {
-        upgrader =
-            new ApiPrimaryOwnerRemovalUpgrader(
-                roleRepository,
-                apiRepository,
-                membershipRepository,
-                organizationRepository,
-                environmentRepository,
-                userRepository,
-                groupRepository
-            );
+        upgrader = new ApiPrimaryOwnerRemovalUpgrader(
+            roleRepository,
+            apiRepository,
+            membershipRepository,
+            organizationRepository,
+            environmentRepository,
+            userRepository,
+            groupRepository
+        );
 
         Logger logger = (Logger) LoggerFactory.getLogger(ApiPrimaryOwnerRemovalUpgrader.class);
         logger.addAppender(appender);
@@ -108,15 +107,15 @@ public class ApiPrimaryOwnerRemovalUpgraderTest {
     public void shouldWarnAndStopWithPrimaryOwnerMissingAndNoConfigurationProperty() throws TechnicalException {
         when(organizationRepository.findAll()).thenReturn(Set.of(organization()));
 
-        when(roleRepository.findByScopeAndNameAndReferenceIdAndReferenceType(any(), any(), any(), any()))
-            .thenReturn(Optional.of(apiPoRole()));
+        when(roleRepository.findByScopeAndNameAndReferenceIdAndReferenceType(any(), any(), any(), any())).thenReturn(
+            Optional.of(apiPoRole())
+        );
 
-        when(apiRepository.searchIds(anyList(), any(Pageable.class), any(Sortable.class)))
-            .thenReturn(
-                new Page<>(List.of("api-test"), 0, 1, 2),
-                new Page<>(List.of("api-test-2"), 1, 1, 2),
-                new Page<>(Collections.emptyList(), 2, 0, 2)
-            );
+        when(apiRepository.searchIds(anyList(), any(Pageable.class), any(Sortable.class))).thenReturn(
+            new Page<>(List.of("api-test"), 0, 1, 2),
+            new Page<>(List.of("api-test-2"), 1, 1, 2),
+            new Page<>(Collections.emptyList(), 2, 0, 2)
+        );
 
         when(membershipRepository.findByReferencesAndRoleId(any(), any(), any())).thenReturn(Set.of());
 
@@ -136,15 +135,15 @@ public class ApiPrimaryOwnerRemovalUpgraderTest {
 
         when(organizationRepository.findAll()).thenReturn(Set.of(organization()));
 
-        when(roleRepository.findByScopeAndNameAndReferenceIdAndReferenceType(any(), any(), any(), any()))
-            .thenReturn(Optional.of(apiPoRole()));
+        when(roleRepository.findByScopeAndNameAndReferenceIdAndReferenceType(any(), any(), any(), any())).thenReturn(
+            Optional.of(apiPoRole())
+        );
 
-        when(apiRepository.searchIds(anyList(), any(Pageable.class), any(Sortable.class)))
-            .thenReturn(
-                new Page<>(List.of("api-test"), 0, 1, 2),
-                new Page<>(List.of("api-test-2"), 1, 1, 2),
-                new Page<>(Collections.emptyList(), 2, 0, 2)
-            );
+        when(apiRepository.searchIds(anyList(), any(Pageable.class), any(Sortable.class))).thenReturn(
+            new Page<>(List.of("api-test"), 0, 1, 2),
+            new Page<>(List.of("api-test-2"), 1, 1, 2),
+            new Page<>(Collections.emptyList(), 2, 0, 2)
+        );
 
         when(membershipRepository.findByReferencesAndRoleId(any(), any(), any())).thenReturn(Set.of());
 
@@ -154,12 +153,9 @@ public class ApiPrimaryOwnerRemovalUpgraderTest {
 
         assertThat(success).isTrue();
 
-        verify(membershipRepository, times(2))
-            .create(
-                argThat(membership ->
-                    membership.getMemberType() == MembershipMemberType.USER && membership.getRoleId().equals(API_PO_ROLE_ID)
-                )
-            );
+        verify(membershipRepository, times(2)).create(
+            argThat(membership -> membership.getMemberType() == MembershipMemberType.USER && membership.getRoleId().equals(API_PO_ROLE_ID))
+        );
     }
 
     @Test
@@ -168,11 +164,14 @@ public class ApiPrimaryOwnerRemovalUpgraderTest {
 
         when(organizationRepository.findAll()).thenReturn(Set.of(organization()));
 
-        when(roleRepository.findByScopeAndNameAndReferenceIdAndReferenceType(any(), any(), any(), any()))
-            .thenReturn(Optional.of(apiPoRole()));
+        when(roleRepository.findByScopeAndNameAndReferenceIdAndReferenceType(any(), any(), any(), any())).thenReturn(
+            Optional.of(apiPoRole())
+        );
 
-        when(apiRepository.searchIds(anyList(), any(Pageable.class), any(Sortable.class)))
-            .thenReturn(new Page<>(List.of("api-test"), 0, 1, 1), new Page<>(Collections.emptyList(), 1, 0, 1));
+        when(apiRepository.searchIds(anyList(), any(Pageable.class), any(Sortable.class))).thenReturn(
+            new Page<>(List.of("api-test"), 0, 1, 1),
+            new Page<>(Collections.emptyList(), 1, 0, 1)
+        );
 
         when(membershipRepository.findByReferencesAndRoleId(any(), any(), any())).thenReturn(Set.of());
 
@@ -182,30 +181,29 @@ public class ApiPrimaryOwnerRemovalUpgraderTest {
 
         assertThat(success).isTrue();
 
-        verify(membershipRepository, times(1))
-            .create(
-                argThat(membership ->
-                    membership.getMemberType() == MembershipMemberType.GROUP && membership.getRoleId().equals(API_PO_ROLE_ID)
-                )
-            );
+        verify(membershipRepository, times(1)).create(
+            argThat(membership -> membership.getMemberType() == MembershipMemberType.GROUP && membership.getRoleId().equals(API_PO_ROLE_ID))
+        );
     }
 
     @Test
     public void shouldNotFixWithoutPrimaryOwnerMissing() throws TechnicalException {
         when(organizationRepository.findAll()).thenReturn(Set.of(organization()));
 
-        when(roleRepository.findByScopeAndNameAndReferenceIdAndReferenceType(any(), any(), any(), any()))
-            .thenReturn(Optional.of(apiPoRole()));
+        when(roleRepository.findByScopeAndNameAndReferenceIdAndReferenceType(any(), any(), any(), any())).thenReturn(
+            Optional.of(apiPoRole())
+        );
 
-        when(apiRepository.searchIds(anyList(), any(Pageable.class), any(Sortable.class)))
-            .thenReturn(
-                new Page<>(List.of("api-test"), 0, 1, 2),
-                new Page<>(List.of("api-test-2"), 1, 1, 2),
-                new Page<>(Collections.emptyList(), 2, 0, 2)
-            );
+        when(apiRepository.searchIds(anyList(), any(Pageable.class), any(Sortable.class))).thenReturn(
+            new Page<>(List.of("api-test"), 0, 1, 2),
+            new Page<>(List.of("api-test-2"), 1, 1, 2),
+            new Page<>(Collections.emptyList(), 2, 0, 2)
+        );
 
-        when(membershipRepository.findByReferencesAndRoleId(any(), any(), any()))
-            .thenReturn(Set.of(membership("api-test")), Set.of(membership("api-test-2")));
+        when(membershipRepository.findByReferencesAndRoleId(any(), any(), any())).thenReturn(
+            Set.of(membership("api-test")),
+            Set.of(membership("api-test-2"))
+        );
 
         boolean success = upgrader.upgrade();
 
